# Stock_FASTAPI

./: README.md  alembic.ini  create_tables.py  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  stock.db
alembic/: env.py
alembic/versions/: 2fb7fbf358b9_create_products_table.py  efebef20dce5_create_users_table.py
app/: database.py  main.py
app/dependencies/: auth.py
app/models/: product.py
app/routes/: auth_routes.py  product_routes.py
app/schemas/: product_schemas.py  user.py
app/services/: auth_service.py  product_service.py  user_service.py
